# dl-training-energy-estimation

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  requirements.txt  run_experiments.py  runner.py
config/: base.yaml  experiment_1.yaml  experiment_2.yaml  experiment_3.yaml  figures.mplstyle
models/: .gitignore  kernel-ridge-regression-full-energy-estimator.joblib  kernel-ridge-regression-power-estimator.joblib  kernel-ridge-regression-stable-energy-estimator.joblib  linear-regression-full-energy-estimator.joblib  linear-regression-power-estimator.joblib  linear-regression-stable-energy-estimator.joblib  ridge-regression-full-energy-estimator.joblib  ridge-regression-power-estimator.joblib  ridge-regression-stable-energy-estimator.joblib  svm-regression-full-energy-estimator.joblib  svm-regression-power-estimator.joblib  svm-regression-stable-energy-estimator.joblib
notebooks/: EDA-and-cleaning.ipynb  RQ1-and-RQ2.ipynb  RQ3-1.ipynb  RQ3-2.ipynb
reports/: .gitignore  dl-training-energy-consumption-dataset.html.dvc  energy-estimator-test-set-results.txt  energy-estimators-comparison.tex  power-estimator-test-set-results.txt  power-estimators-comparison.tex
src/: environment.py  generate_combinations.py  testing.py  utils.py
src/data/: datasets.py  gpu_specs.py
src/features/: analysis.py  preprocessing.py  utils.py
src/mlflow_utils/: utils.py
src/models/dl/: __init__.py  callbacks.py  inception_resnet_v2.py  inception_v3.py  model.py  (+9 more)
src/profiling/: __init__.py  metrics.py  monitoring.py  profile_models.py
(+4 files in other folders)
